updating cors to final domain